Bug 704405 - typo causing build failure when linked against non-forked lcms2
Summary: typo causing build failure when linked against non-forked lcms2
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color Management (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Default assignee
URL:
Keywords:
: 704501 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-18 12:18 UTC by Jonas Smedegaard
Modified: 2021-10-05 15:08 UTC (History)
3 users (show)

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonas Smedegaard 2021-09-18 12:18:53 UTC
git commit f3aaf27 introduced a typo in file base/gsicc_lcms2.c:

"return gscms_transformm_color_const" has an "m" too many around line 465.
Comment 1 Robin Watts 2021-10-01 11:47:33 UTC
Fixed in:

commit 830afae5454dea3bff903869d82022306890a96c
Author: Robin Watts <Robin.Watts@artifex.com>
Date:   Fri Oct 1 12:44:44 2021 +0100

    Bug 704405: Fix typo in non-forked lcms2 code.

Thanks for the report!
Comment 2 Ken Sharp 2021-10-05 15:08:06 UTC
*** Bug 704501 has been marked as a duplicate of this bug. ***