Bug 704405: Fix typo in non-forked lcms2 code.